commented the code for whackamole game

--- a/public/wackamole.html
+++ b/public/wackamole.html
@@ -20,9 +20,15 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+
+  <!-- gradient class is what sets backgrounf -->
   <body class="gradient">
 <div class="container">
+
+    <!-- pulse class makes the timer have pulse effect -->
     <h1 class="pulse" id="timer">Time Remaining: 30</h1>
+
+    <!-- tossing class adds tossing effect -->
         <h2 class="tossing" id="score">Your score: 0</h2>
         <button class="btn btn-default bounce" id="gameStart">Start</button>
         <button class="btn btn-default bounce" id="gameReset">Start Over</button> 
@@ -30,6 +36,7 @@
 
 <div class="col-md-4">
     <div class="container-fluid">
+        <!-- bigEntrance adds the beginning effect that makes div boxes pop on screen -->
         <div class="whack-boxes bigEntrance"></div>
         <div class="whack-boxes bigEntrance"></div>
         <div class="whack-boxes bigEntrance"></div>
