fixed typos in comments

--- a/public/wackamole.html
+++ b/public/wackamole.html
@@ -21,7 +21,7 @@
     <![endif]-->
   </head>
 
-  <!-- gradient class is what sets backgrounf -->
+  <!-- gradient class is what sets background -->
   <body class="gradient">
 <div class="container">
 
